--- a/webBanTiVi/src/main/resources/templates/user/page/product/evaluate.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/evaluate.html
@@ -24,12 +24,15 @@
                 </div>
                 <div class="mt-3">
                     <div>
-                        <button class="btn btn-primary" data-bs-target="#writeEvaluate"
-                                data-bs-toggle="modal">
+                        <button class="btn btn-primary" style="width: 40%" data-bs-target="#writeEvaluate"
+                                data-bs-toggle="modal"
+                                th:if="${(session.user != null && hasEvaluate ==true)}">
                             Viết đánh giá
                         </button>
                     </div>
-                    <small>Bạn cần đăng nhập để đánh giá</small>
+                    <small th:if="${session.user == null}">Bạn cần đăng nhập để đánh giá</small>
+                    <small th:unless="${(session.user != null && hasEvaluate ==false)}">Bạn đã đánh giá sản phẩm
+                        này</small>
                 </div>
             </div>
         </div>
@@ -59,11 +62,22 @@
 
                 <div>
                     <img th:each="img:${item.evaluateList}" th:src="|/image/product/${img.nameImage}|"
-                         alt="Ảnh bị lỗi" class="w-px-100">
+                         data-bs-target="#image"
+                         data-bs-toggle="modal"
+                         alt="Ảnh bị lỗi" class="w-px-100 image-evaluate">
                 </div>
+
                 <hr>
             </div>
+            <div class="modal fade" id="image" tabindex="-1" aria-hidden="true">
+                <div class="modal-dialog modal-lg text-center" role="img">
+                    <!--                    <div class="modal-content">-->
+                    <img class="w-75 h-75" src="" alt="lỗi" id="image-evaluate-modal">
+                    <!--                    </div>-->
+                </div>
+            </div>
         </div>
+
         <div class="card-footer text-center">
             <div class="modal fade" id="writeEvaluate" tabindex="-1" aria-modal="true" role="dialog">
                 <div class="modal-dialog" role="document">
