--- a/webBanTiVi/src/main/resources/templates/user/page/product/detail.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/detail.html
@@ -112,12 +112,13 @@
                     </tbody>
                 </table>
                 <div class="mb-3">
-                    <a th:class="|border border-2 p-2 mb-3 mx-2 text-black ${product.id==productAll.id ? 'bg-label-primary':''}|"
-                       th:each="productAll:${productAll.productDetails}"
-                       th:href="@{'/product/detail/'+${productAll.id}}" th:if="${productAll.active==true}">
+                    <div class="d-inline-block mb-4" th:each="productAll:${productAll.productDetails}">
+                        <a th:class="|border border-2 p-2 mb-3 mx-2 text-black ${product.id==productAll.id ? 'bg-label-primary':''}|"
+                           th:href="@{'/product/detail/'+${productAll.id}}" th:if="${productAll.active==true}">
                         <span th:each="field:${productAll.fieldList}" class="mx-2"><span
                                 th:text="|${field.value}|"></span></span>
-                    </a>
+                        </a>
+                    </div>
                 </div>
                 <div class="buttons_added mt-4 " th:id="${product.id}">
                     <input class="minus is-form" type="button"
@@ -248,17 +249,17 @@
                         <div>
                             <a th:href="|/product/evaluate/${productAll.id}|" class="btn btn-outline-secondary"
                                style="width: 40%">
-                                Xem tất cả đánh giá([(${#lists.size(product.product.listEvaluate)})])
+                                Xem tất cả đánh giá([(${countEvaluate})])
                             </a>
                             <button class="btn btn-primary" style="width: 40%" data-bs-target="#writeEvaluate"
                                     data-bs-toggle="modal"
-                                    th:if="${(session.user != null && hasEvaluate !=true)}">
+                                    th:if="${(session.user != null && hasEvaluate == false)}">
                                 Viết đánh giá
                             </button>
                         </div>
                         <small th:if="${session.user == null}">Bạn cần đăng nhập để đánh giá</small>
-                        <small  th:unless="${(session.user != null && hasEvaluate !=true)}">Bạn đã đánh giá sản phẩm này</small>
-
+                        <small th:if="${session.user != null and hasEvaluate ==true}">Bạn đã đánh giá sản phẩm
+                            này</small>
                     </div>
                     <div class="modal fade" id="writeEvaluate" tabindex="-1" aria-modal="true" role="dialog">
                         <div class="modal-dialog" role="document">
