--- a/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
@@ -108,7 +108,7 @@
                                                 <input type="email" class="form-control"
                                                        placeholder="oanhpham085@gmail.com"
                                                        th:value="${session.user.email}"
-                                                       id="email" th:name="email">
+                                                       th:name="email">
                                             </div>
                                             <!--                                                address-->
                                             <div class="mb-3">
@@ -297,58 +297,62 @@
         var email = document.myform.email.value;
         var address = document.myform.address.value;
         var phoneNumber = document.myform.phoneNumber.value;
-        var status = false;
-
+        var status = [];
         //name
-        if (name.length < 1) {
+        if (name.trim().length < 1) {
             document.getElementById("nameloc").innerHTML =
                 " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống tên!";
-            status = false;
+            status.push(false)
+
         } else {
-            document.getElementById("nameloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i>";
-            status = true;
+            document.getElementById("nameloc").innerHTML = "";
         }
         //address
-        if (address.length < 1) {
+        if (address.trim().length < 1) {
             document.getElementById("addressloc").innerHTML =
                 " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống địa chỉ!";
-            status = false;
+            status.push(false)
         } else {
-            document.getElementById("addressloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i>";
-            status = true;
-        }
-        //email
-        var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-        if (email.length < 1) {
-            document.getElementById("emailloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống email!";
-            status = false;
-        } else if (!filter.test(email.value)) {
-            document.getElementById("emailloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i>Hay nhap dia chi email hop le.\nExample@gmail.com!";
-            email.focus;
-            status = false;
-        } else {
-            document.getElementById("emailloc").innerHTML =
-                " <img src='checked.gif'/>";
-            status = true;
-        }
-        //phone
-        var phoneno = /^\+?([0-9]{2})\)?[-. ]?([0-9]{4})[-. ]?([0-9]{4})$/;
-        if (phoneNumber.length < 1) {
-            document.getElementById("numloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống số điện thoại!";
-            status = false;
-        } else if (phoneNumber.match(phoneno)) {
-            status = true;
-        } else {
-            document.getElementById("numloc").innerHTML = "Không đúng định dạng số điện thoại!";
-            status = false;
+            document.getElementById("addressloc").innerHTML = "";
+            // status = true;
         }
 
-        return status;
+        //email
+        var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+
+        if (email.trim().length < 1) {
+            document.getElementById("emailloc").innerHTML =
+                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống email!";
+            status.push(false)
+        } else if (filter.test(email.value)) {
+            document.getElementById("emailloc").innerHTML =
+                " <i class='bx bx-x-circle' style='color:#ff0000' ></i>Địa chỉ email không hợp lệ.\n Example@gmail.com!";
+            // email.focus();
+            status.push(false)
+        } else {
+            if (document.getElementById("emailloc")) {
+                document.getElementById("emailloc").innerHTML = "";
+            }
+            // status = true;
+        }
+
+        //phone
+        var phoneno = /^\+?([0-9]{2})\)?[-. ]?([0-9]{4})[-. ]?([0-9]{4})$/;
+        if (phoneNumber.trim().length < 1) {
+            document.getElementById("numloc").innerHTML =
+                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống số điện thoại!";
+            status.push(false)
+        } else if (phoneNumber.match(phoneno)) {
+            // status = true;
+            document.getElementById("numloc").innerHTML = "";
+        } else {
+            document.getElementById("numloc").innerHTML = "Không đúng định dạng số điện thoại!";
+            status.push(false)
+        }
+
+        if (status.indexOf(false) > -1) {
+            return false
+        }
     }
 
     function tinhtong() {
