oanh sửa validate thêm sản phẩm, hiển thị sản phẩm

--- a/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
@@ -96,7 +96,7 @@
                         <td th:text="${product.sku}"></td>
                         <td th:text="${product.brand.name}"></td>
                         <td th:text="${product.avgPoint}"></td>
-                        <td class="form-switch text-center"><input class="form-check-input update-active-product"
+                        <td class="form-switch text-center"><input class="form-check-input update-active-product cursor-pointer"
                                                                    type="checkbox"
                                                                    th:checked="${product.active}"
                                                                    th:value="${product.id}"></td>
