--- a/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
@@ -2,7 +2,7 @@
 
 <div class="mb-4">
     <div class="row justify-content-end me-4">
-        <button type="button" class="btn btn-success mb-4 w-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
+        <button type="button" class="btn btn-success w-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
             <i class='tf-icon bx bx-plus-medical'></i> Thêm giảm giá
         </button>
     </div>
